--- a/index.html
+++ b/index.html
@@ -1,41 +1,3 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <title>VibeMusic</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      background: #000;
-      color: #fff;
-      font-family: system-ui, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
-    }
-    button {
-      font-size: 1.4rem;
-      padding: 1rem 2rem;
-      border-radius: 16px;
-      border: none;
-      margin-top: 2rem;
-    }
-    .on { background: #2ecc71; }
-    .off { background: #e74c3c; }
-  </style>
-</head>
-
-<body>
-  <h1>🎵 VibeMusic</h1>
-  <p>Transforme la musique en vibrations</p>
-
-  <button id="toggle" class="on">Démarrer</button>
-
-  <p id="status"></p>
-
 <script>
 let audioContext;
 let analyser;
@@ -57,8 +19,12 @@ button.onclick = async () => {
 
 async function start() {
   audioContext = new (window.AudioContext || window.webkitAudioContext)();
+
+  // IMPORTANT pour iOS
+  await audioContext.resume();
+
   analyser = audioContext.createAnalyser();
-  analyser.fftSize = 512;
+  analyser.fftSize = 256;
 
   const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
   microphone = audioContext.createMediaStreamSource(stream);
@@ -93,17 +59,14 @@ function loop() {
   }
 
   const rms = Math.sqrt(sum / dataArray.length);
-
   const now = Date.now();
 
-  // seuil + limitation des vibrations
-  if (rms > 0.05 && now - lastVibration > 120) {
-    navigator.vibrate(50);
+  // Seuil plus bas + vibrations plus espacées (clé pour iOS)
+  if (rms > 0.03 && now - lastVibration > 300) {
+    navigator.vibrate([100]);
     lastVibration = now;
   }
 
   requestAnimationFrame(loop);
 }
 </script>
-</body>
-</html>
